# ProxySense

./: .env.example  .replit  README.md  README_Basic_Auth.md  README_Deploy.md  check_routes_fix.py  create_admin_user.py  debug_server.sh  debug_service.py  demo_basic_auth.py  deploy.sh  deploy_fixed.sh  deploy_hotfix.sh  deploy_simple.sh  enable_basic_auth.py  encryption.key  fix_404_routes.py  fix_apt.sh  fix_auth_issue.py  fix_cookie_auth.sh  fix_database_pool.py  fix_dependencies.sh  fix_deployment.sh  fix_existing_install.sh  fix_glances_probe_error.sh  fix_glances_timeout.sh  fix_network_access.sh  fix_production_errors.sh  fix_syntax_error.sh  install.md  main.py  manage.py  manage_basic_auth.py  pyproject.toml  quick_create_admin.sh  replit.md  setup_requirements.txt  simple_create_admin.py  test_basic_auth.py  test_glances_connection.py  (+1 more)
attached_assets/: Pasted--2025-08-21-21-32-16-Traceback-most-recent-call-last-File--1755811971649_1755811971649.txt  Pasted--404-Not-Found-main-py--1755810005092_1755810005092.txt  Pasted--DEBUG-backend-config-No-module-named-pydantic-s-1755885306126_1755885306126.txt  Pasted--REVERSE-PROXY-MONITOR-DEBUG--1755885226195_1755885226195.txt  Pasted--Reverse-Proxy-Monitor-UI-API--1755734083262_1755734083262.txt  Pasted--check-routes-fix-py-2025-08-21-21-02-24-https-raw-githubusercontent-com-globalduckmac-Proxy-1755810204758_1755810204758.txt  Pasted-Aug-21-20-21-33-testdeploy-aeza-network-reverse-proxy-monitor-44276-INFO-213-137-89-4-0-GE-1755807844682_1755807844682.txt  (+5 more)
backend/: __init__.py  app.py  auth.py  config.py  crypto.py  (+11 more)
(+28 files in other folders)
