[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "cryptography>=45.0.6",
    "dnspython>=2.7.0",
    "fastapi>=0.116.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "oauthlib>=3.3.1",
    "paramiko>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.2",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
]
